Fix some CSS header bugs on mobile (#1376)
* Fix some CSS header bugs on mobile

* Tweaks

* More bugs

* lint

* Search bar fix

* Tweaks

* lint

--- a/src/pydata_sphinx_theme/assets/styles/components/_search.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_search.scss
@@ -3,7 +3,18 @@
  **/
 .bd-search {
   position: relative;
-  padding: 1rem 0;
+  padding-left: 0.5rem;
+  gap: 0.5rem;
+  background-color: var(--pst-color-background);
+  border-radius: $admonition-border-radius;
+  border: 1px solid var(--pst-color-border);
+  color: var(--pst-color-text-base);
+
+  // Background should always be same color regardless of active or not
+  &:active {
+    background-color: var(--pst-color-background);
+    color: var(--pst-color-text-muted);
+  }
 
   .icon {
     position: absolute;
@@ -11,27 +22,15 @@
     left: 25px;
   }
 
-  i.fa-solid.fa-magnifying-glass {
+  .fa-solid.fa-magnifying-glass {
     position: absolute;
     left: calc((2.5rem - 0.7em) / 2);
     color: var(--pst-color-text-muted);
   }
 
   input {
-    background-color: var(--pst-color-background);
-    border-radius: $admonition-border-radius;
-    border: 1px solid var(--pst-color-border);
-    padding-left: 2.5rem;
-    color: var(--pst-color-text-base);
-
     // Inner-text of the search bar
     &::placeholder {
-      color: var(--pst-color-text-muted);
-    }
-
-    // Background should always be same color regardless of active or not
-    &:active {
-      background-color: var(--pst-color-background);
       color: var(--pst-color-text-muted);
     }
 
@@ -123,7 +122,7 @@
   }
 
   // Font and input text a bit bigger
-  i,
+  svg,
   input {
     font-size: var(--pst-font-size-icon);
   }
@@ -161,8 +160,13 @@
     font-size: 0.75em;
   }
 
+  // Ensures that all the text lines up in the middle
+  > * {
+    align-items: center;
+  }
+
   // Only the icon should be visible on narrow screens
-  :not(i) {
+  > :not(svg) {
     display: none;
 
     @include media-breakpoint-up(lg) {
