--- a/src/pydata_sphinx_theme/assets/styles/sections/_header.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_header.scss
@@ -163,7 +163,7 @@
     }
 
     &.primary-toggle {
-      margin-left: 1rem;
+      margin-right: 1rem;
       @include media-breakpoint-up($breakpoint-sidebar-primary) {
         display: none;
       }
